<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <item android:id="@+id/nav_fish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/fish"
        android:icon="@drawable/fish_icon"
        android:onClick="onNavigationItemSelected"
        android:checkable="true"/>
    <item android:id="@+id/nav_egg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/egg"
        android:icon="@drawable/egg_icon"
        android:onClick="onNavigationItemSelected"
        android:checkable="true"/>
    <item android:id="@+id/nav_milk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/milk"
        android:icon="@drawable/milk_icon"
        android:onClick="onNavigationItemSelected"
        android:checkable="true"/>
    <item android:id="@+id/nav_wheat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/wheat"
        android:icon="@drawable/wheat_icon"
        android:onClick="onNavigationItemSelected"
        android:checkable="true"/>
    <item android:id="@+id/nav_shrimp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/shrimp"
        android:icon="@drawable/shrimp_icon"
        android:onClick="onNavigationItemSelected"
        android:checkable="true"/>
</menu>
